--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -884,3 +884,82 @@ li {
 .my-style h1 {
     color: #ff9934;
 }
+
+.login {
+    height: 100%;
+    overflow: hidden;
+    padding: 1em 0.6em;
+}
+
+.login div {
+    font-size: 1.2em;
+    height: 3em;
+    background: #fff;
+    margin-bottom: 0.6em;
+    box-shadow: 1px 1px 1px #e0e0e0;
+}
+
+.login div span {
+    width: 4em;
+    height: 3em;
+    line-height: 3em;
+    text-align: center;
+    float: left;
+    position: relative;
+}
+
+.login div span img {
+    position: absolute;
+    top: 0.7em;
+    left: 0.8em;
+}
+
+.login div input {
+    font: 1em normal,  Arial, Helvetica, sans-serif;
+    width: auto;
+    height: 100%;
+    border: 0;
+    padding: 0;
+}
+
+.login p {
+    font-size: 1.2em;
+    height: 2em;
+    line-height: 2em;
+    margin-bottom: 0.8em;
+}
+
+.login input.btnLogin {
+    font: 1em bold  Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 3em;
+    line-height: 3em;
+    border-radius: 0.3em;
+    text-align: center;
+    color: #fff;
+    background: #ff9934;
+    border: 0;
+    margin-bottom: 0.8em;
+    display: block;
+}
+
+.login a.btnRegister {
+    font: 1em bold Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 3em;
+    line-height: 3em;
+    border-radius: 0.3em;
+    text-align: center;
+    color: #fff;
+    background: #2576db;
+    display: block;
+}
+
+.login .errorTip {
+    color: #ea5252;
+    line-height: 3em;
+    background: #fff6f6;
+    border: 1px solid #ea5252;
+    padding: 0 0.6em;
+    display: none;
+}
