--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1002,7 +1002,7 @@ li {
 }
 
 .login div span {
-    width: 4em;
+    width: 20%;
     height: 3em;
     line-height: 3em;
     text-align: center;
@@ -1018,7 +1018,7 @@ li {
 
 .login div input{
     font: 1em normal,  Arial, Helvetica, sans-serif;
-    width: auto;
+    width: 80%;
     height: 100%;
     border: 0;
     padding: 2%;
